@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                    http://www.newbreedsoftware.com/tuxpaint/
 
-                         June 14, 2002 - March 31, 2004
+                         June 14, 2002 - April 14, 2004
 
      ----------------------------------------------------------------------
 
@@ -434,6 +434,8 @@ Options
                      |--------------------+------------------+---------|
                      |tamil               |                  |         |
                      |--------------------+------------------+---------|
+                     |vietnamese          |                  |         |
+                     |--------------------+------------------+---------|
                      |turkish             |                  |         |
                      |--------------------+------------------+---------|
                      |walloon             |walon             |         |
@@ -645,6 +647,8 @@ Options
            |ta_IN (*)      |                   |Tamil               |
            |---------------+-------------------+--------------------|
            |tr_TR@euro     |                   |Turkish             |
+           |---------------+-------------------+--------------------|
+           |vi_VN          |                   |Vietnamese          |
            |---------------+-------------------+--------------------|
            |wa_BE@euro     |                   |Walloon             |
            |---------------+-------------------+--------------------|
