@@ -23,7 +23,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>June 14, 2002 - March 31, 2004</p>
+<p>June 14, 2002 - April 14, 2004</p>
 </center>
 
 <hr size=2 noshade>
@@ -35,8 +35,8 @@ New Breed Software</p>
   access to previous images using a thumbnail browser (e.g., no access to
   the underlying file-system).</p>
 
-  <p>Unlike popular drawing programs like "The&nbsp;GIMP," it has a very limited
-  tool-set.  However, it provides a much simpler interface,
+  <p>Unlike popular drawing programs like "The&nbsp;GIMP," it has a very
+  limited tool-set.  However, it provides a much simpler interface,
   and has entertaining, child-oriented additions such as sound effects.</p>
 </blockquote>
 
@@ -644,6 +644,11 @@ New Breed Software</p>
 	    <td>&nbsp;</td>
 	  </tr>
 	  <tr>
+	    <td><code>vietnamese</code></td>
+	    <td>&nbsp;</td>
+	    <td>&nbsp;</td>
+	  </tr>
+	  <tr>
 	    <td><code>turkish</code></td>
 	    <td>&nbsp;</td>
 	    <td>&nbsp;</td>
@@ -1020,6 +1025,11 @@ New Breed Software</p>
         <td><code>tr_TR@euro</code></td>
 	<td>&nbsp;</td>
 	<td>Turkish</td>
+      </tr>
+      <tr>
+        <td><code>vi_VN</code></td>
+	<td>&nbsp;</td>
+	<td>Vietnamese</td>
       </tr>
       <tr>
         <td><code>wa_BE@euro</code></td>
