@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2004.03.31
-.TH TUXPAINT 1 "31 Mar 2004" "0.9.14" "Tux Paint"
+.\" tuxpaint.1 - 2004.04.14
+.TH TUXPAINT 1 "14 Apr 2004" "0.9.14" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
@@ -347,6 +347,9 @@ tamil
 turkish
 .TP 2
 -
+vietnamese
+.TP 2
+-
 walloon
 .RE
 .PD
@@ -471,6 +474,7 @@ Marco Milanesi,
 Mugunth,
 Flavio Pastor,
 Primoz Peterlin,
+Le Quang Phan,
 Milan Plzik,
 John Popplewell,
 Geert Stams,
