@@ -11,6 +11,9 @@ http://www.newbreedsoftware.com/tuxpaint/
   * Updated Makefile for easier install.
     Mark K. Kim <tuxNO_SOLICITATIONpaint-dev@cbreak.org>
 
+  * Vietnamese translation created.  (Simple version)
+    Le Quang Phan <lqphan@hn.vnn.vn>
+
   * Afrikaans translation created.
     Petri Jooste <rkwjpj@puk.ac.za>
 
